# parser-caching-benchmarks

./: README.md  argparse_bench.py  jsonargparse_test.py  pyproject.toml
src/parser_caching_benchmarks/: argparse_bench.py  defopt_bench.py  defopt_extraction_bench.py  heavier_argparse_bench.py  jsonargparse_bench.py
